# FIND-TUNES

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: continual_learning.yml.disable
Notebook/: FIND_TUNES_frequency_model_training (1).ipynb  FIND_TUNES_model_registry.ipynb  FIND_TUNES_selecting_best_pitch_model.ipynb  pitch_based_siamese_network (1).ipynb
app/api/: main.py
data/: retry_ingestion.csv
frontend/: app.js  index.html  style.css
src/data/: batch_ingestion_sample.csv  database_backup.csv
src/find_tunes/: __init__.py
src/find_tunes/core/: audio.py  config.py  database.py
src/find_tunes/scripts/: cleanup_DB.py  continual_learning.py  evaluate_and_promote.py  seed_DB.py  seed_noise_dataset.py
src/find_tunes/services/ingestion_cycle/: audio_engine.py  ingestion.py
src/find_tunes/services/ml_branch/: fusion.py  matcher.py  onnx_runner.py  preprocessor.py
src/find_tunes/services/ml_branch/continual_learning/: dataset.py  model.py  train_model.py
src/find_tunes/services/shazam_branch/: dsp.py  matcher.py
tests/local_tests/: evaluate_both_pipeline.py  ingestion_cycle_test.py
tests/unit_tests/: audio_ingestion_cycle_test.py
