[project]
name = "find-tunes"
version = "0.1.0"
description = "A shazam like app with machine learning based optimization for better audio recognization on noisey data"
readme = "README.md"
authors = [
    { name = "Akashthakur0326", email = "akashthakur0326@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.128.0",
]
frontend = [
    "numpy>=2.4.2",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
#uv export --format requirements-txt > requirements.txt